tests/reference/asr-intrinsics1-8ebce32.stderr
semantic error: Argument of the `radix` must be Integer or Real
 --> tests/errors/intrinsics1.f90:3:14
  |
3 |     print *, radix((2.4, 1.0))
  |              ^^^^^^^^^^^^^^^^^ 
